[gd_scene load_steps=30 format=3 uid="uid://byib0mrhwhxqy"]

[ext_resource type="Script" uid="uid://1f6uprk7155l" path="res://script/slime.gd" id="1_p2gj0"]
[ext_resource type="Texture2D" uid="uid://o5hqn52e6lma" path="res://art/charakter/slime-Sheet.png" id="2_n6pvg"]
[ext_resource type="AudioStream" uid="uid://c3wfhdlpkjudd" path="res://music_and_sound/Hit.wav" id="3_pjw23"]
[ext_resource type="AudioStream" uid="uid://c7ldovmg04j3y" path="res://music_and_sound/Hurt.wav" id="4_2npkn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2gj0"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pvg"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbccl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_24adn"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnioy"]
atlas = ExtResource("2_n6pvg")
region = Rect2(160, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjuo"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02ik"]
atlas = ExtResource("2_n6pvg")
region = Rect2(224, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8ps"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_g40cl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxm07"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2qvl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyl0w"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_fur4c"]
atlas = ExtResource("2_n6pvg")
region = Rect2(160, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v7ff"]
atlas = ExtResource("2_n6pvg")
region = Rect2(192, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_35t6e"]
atlas = ExtResource("2_n6pvg")
region = Rect2(224, 0, 32, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_pbccl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2gj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbccl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24adn")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02ik")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu8ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g40cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxm07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2qvl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyl0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fur4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v7ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t6e")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_24adn"]
radius = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2gj0"]
size = Vector2(12, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_p2gj0"]
radius = 15.0

[node name="slime" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_p2gj0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-1.5, -11.25)
scale = Vector2(0.90625, 0.94)
sprite_frames = SubResource("SpriteFrames_pbccl")
animation = &"hurt"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="detection-area" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/detection-area"]
position = Vector2(1.65517, 3.45745)
shape = SubResource("CircleShape2D_24adn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-1, -5.5)
shape = SubResource("RectangleShape2D_p2gj0")

[node name="slime_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_hitbox"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_p2gj0")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pjw23")

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2npkn")

[connection signal="area_entered" from="AnimatedSprite2D/detection-area" to="." method="_on_detectionarea_area_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/detection-area" to="." method="_on_detectionarea_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D/detection-area" to="." method="_on_detectionarea_body_exited"]
[connection signal="body_entered" from="slime_hitbox" to="." method="_on_slime_hitbox_body_entered"]
[connection signal="body_exited" from="slime_hitbox" to="." method="_on_slime_hitbox_body_exited"]
